--- a/Project_Air_Romanova_Mariia-4.ipynb
+++ b/Project_Air_Romanova_Mariia-4.ipynb
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6.18 s\n"
+      "Wall time: 8.56 s\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 7.29 s\n"
+      "Wall time: 16.9 s\n"
      ]
     }
    ],
@@ -110,7 +110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 11.7 s\n"
+      "Wall time: 20.2 s\n",
+      "Parser   : 331 ms\n"
      ]
     }
    ],
@@ -129,7 +130,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6.07 s\n"
+      "Wall time: 5.8 s\n",
+      "Parser   : 118 ms\n"
      ]
     }
    ],
@@ -150,7 +152,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.07 s\n"
+      "Wall time: 7.55 s\n",
+      "Parser   : 123 ms\n"
      ]
     }
    ],
@@ -180,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3min 49s\n"
+      "Wall time: 5min 23s\n"
      ]
     }
    ],
@@ -199,9 +202,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 16.6 s\n",
-      "Compiler : 136 ms\n",
-      "Parser   : 615 ms\n"
+      "Wall time: 11.8 s\n",
+      "Compiler : 311 ms\n",
+      "Parser   : 541 ms\n"
      ]
     }
    ],
@@ -242,8 +245,8 @@
       "Error With n_samples=1, test_size=0.1 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters.\n",
       "Error With n_samples=0, test_size=0.1 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters.\n",
       "Error With n_samples=0, test_size=0.1 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters.\n",
-      "Wall time: 22.8 s\n",
-      "Parser   : 1 s\n"
+      "Wall time: 28.8 s\n",
+      "Parser   : 420 ms\n"
      ]
     }
    ],
@@ -284,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 32.4 ms\n"
+      "Wall time: 132 ms\n"
      ]
     }
    ],
@@ -389,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "83de5c6c",
    "metadata": {},
    "outputs": [
@@ -397,20 +400,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 лучших аэропорта прилета для аэропорта вылета LAX\n",
+      "3 лучших аэропорта прилета для аэропорта вылета MSP\n",
       "\n",
-      "   DESTINATION_AIRPORT  MEAN_ARRIVAL_DELAY_IN_PAST       RMSE\n",
-      "71                 ITO                   29.875000  41.015630\n",
-      "68                 HDN                   54.200000  53.391627\n",
-      "56                 SAF                   53.888889  54.826330\n",
-      "Wall time: 466 ms\n"
+      "    DESTINATION_AIRPORT  MEAN_ARRIVAL_DELAY_IN_PAST       RMSE\n",
+      "103                 ABR                   17.666667   5.883368\n",
+      "100                 IMT                   30.666667  19.978529\n",
+      "70                  FCA                   42.666667  25.653165\n",
+      "Wall time: 490 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "start_airport = np.random.choice(flights['ORIGIN_AIRPORT'].unique()) \n",
-    "where_to_go_from_start_airport = flights[flights.ORIGIN_AIRPORT==start_airport]['DESTINATION_AIRPORT'].unique()\n",
+    "start_airport = np.random.choice(flights_real['ORIGIN_AIRPORT'].unique()) \n",
+    "where_to_go_from_start_airport = flights_real[flights_real.ORIGIN_AIRPORT==start_airport]['DESTINATION_AIRPORT'].unique()\n",
     "\n",
     "where_to_go_from_start_airport = pd.DataFrame(where_to_go_from_start_airport)\n",
     "where_to_go_from_start_airport.columns = ['DESTINATION_AIRPORT']\n",
